--- a/Day3/medowlarkTravel/public/views/layouts/main.hbs
+++ b/Day3/medowlarkTravel/public/views/layouts/main.hbs
@@ -4,6 +4,9 @@
  <title>Meadowlark Travel</title>
  </head>
  <body>
- {{{body}}}
+    <header>
+        <img src="../../img/logo.png" alt="logo">
+    </header>
+    {{{body}}}
  </body>
 </html>
