--- a/Day3/medowlarkTravel/views/layouts/main.hbs
+++ b/Day3/medowlarkTravel/views/layouts/main.hbs
@@ -5,7 +5,7 @@
  </head>
  <body>
     <header>
-        <img src="../../img/logo.png" alt="logo">
+        <img src="/img/logo.png" alt="logo">
     </header>
     {{{body}}}
  </body>
