--- a/Day6/quickTest/public/css/style.css
+++ b/Day6/quickTest/public/css/style.css
@@ -68,9 +68,11 @@ div.owl-wrapper {
     outline: none;
 } */
 
+
 body {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
+    background-color: beige;
 }
 
 div.header {
