--- a/Day6/quickTest/views/layouts/main.hbs
+++ b/Day6/quickTest/views/layouts/main.hbs
@@ -12,7 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-light">
+  <div class="header">
+    <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a href="/"><img src="./img/logo.jpg" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,6 +29,8 @@
     </div>
   </div>
 </nav>
+  </div>
+
 
     {{{ body }}}
 
