--- a/06-07-08/ch08/views/contest/vacation-photo.hbs
+++ b/06-07-08/ch08/views/contest/vacation-photo.hbs
@@ -1,5 +1,5 @@
-<h2>Sign up for our newsletter to receive news and specials!</h2>
-<form class="form-horizontal" role="form" action="/newsletter-signup/process" method="POST">
+<h2>Vacation Photo Contest</h2>
+<form class="form-horizontal" role="form" enctype="multipart/form-data" method="POST" action="/contest/vacation-photo/{{year}}/{{month}}">
     <input type="hidden" name="_csrf" value="{{csrf}}">
     <div class="form-group">
         <label for="fieldName" class="col-sm-2 controllabel">Name</label>
@@ -14,8 +14,15 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="fieldPhoto" class="col-sm-2 controllabel">Vacation photo</label>
+        <div class="col-sm-4">
+            <input type="file" class="form-control" required accept="image/*" id="fieldPhoto" name="photo">
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-sm-offset-2 col-sm-4">
             <button type="submit" class="btn btnprimary">Register</button>
         </div>
     </div>
 </form>
+
