commit thi thuc hanh

--- a/ThiThucHanh/views/home.hbs
+++ b/ThiThucHanh/views/home.hbs
@@ -1,4 +1,8 @@
-<h2>Welcome</h2>
 
-<p>Welcome to Golden Center Restaurant! Please register first!</p>
-<p>Go to <a href="/register">Register </a>Page</p>
+<div class="content">
+
+    <h2>Welcome</h2>
+
+    <p>Welcome to Golden Center Restaurant! Please register first!</p>
+    <p>Go to <a href="/register">Register </a>Page</p>
+</div>
