--- a/ThiThucHanh/views/layouts/main.hbs
+++ b/ThiThucHanh/views/layouts/main.hbs
@@ -8,19 +8,17 @@
 
     <title>Golden Center</title>
 
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
+
     <div class="container">
-        <header style="margin-bottom: 20px;">
-            <h1>Golden Center Restaurant</h1>
-            <img src="/img/logo.jpg" alt="logo">
-        </header>
         {{{ body }}}
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/boostrap.min.js"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/boostrap.min.js"></>
 
 </body>
 </html>
