--- a/ThiThucHanh/views/register-thank-you.hbs
+++ b/ThiThucHanh/views/register-thank-you.hbs
@@ -1,11 +1,53 @@
-<h2>Thank You</h2>
-<p>Thank you for the information</p>
-<p>Will be back to <a href="/">Home</a> page after 3 seconds</p>
 
-<script>
-        setTimeout(function(){
-            window.location.href = '/';
-         }, 3000);
+<script type="text/javascript">
+    var count = 5;
+    var redirect = "/";
+    function countDown(){
+        var timer = document.getElementById("timer");
+        if(count > 0){
+            count--;
+            timer.innerHTML = "Thank you for the information.<br> Back to Home page in <b>"+count+"</b> seconds.";
+            setTimeout("countDown()", 1000);
+        }else{
+            window.location.href = redirect;
+        }
+    }
 </script>
+
+<div class="thank-you-content">
+    <div class="wrap">
+        <p id="timer"><script type="text/javascript">countDown();</script></p>
+    </div>
+</div>
+
+<style>
+    div.thank-you-content {
+    position: relative;
+    height: 100vh;
+    background-image: url('../img/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+div.wrap {
+    position: absolute;
+    backdrop-filter: blur(20px);
+    background-color: rgba(255,255,255,0.1);
+    border-radius: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 500px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+</style>
+
+
+
 
 
