--- a/ThiThucHanh/views/register.hbs
+++ b/ThiThucHanh/views/register.hbs
@@ -1,22 +1,36 @@
-<h2>Register to do somethings more!</h2>
-<form class="form-horizontal" role="form" action="/register/process" method="POST">
-    <input type="hidden" name="_csrf" value="{{csrf}}">
-    <div class="form-group">
-        <label for="fieldName" class="col-sm-2 controllabel">Name</label>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" id="fieldName" name="name">
+<div class="register-content">
+    <h2>Register to do somethings more!</h2>
+    <form class="form-horizontal row" role="form" action="/register/process" method="POST">
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+        <div class="form-group col-sm-5 offset-sm-1">
+            <label for="fieldName" class="controllabel">Name</label>
+            <div>
+                <input type="text" class="form-control" required id="fieldName" name="name">
+            </div>
         </div>
+        <div class="form-group col-sm-5">
+            <label for="fieldEmail" class="controllabel">Email</label>
+            <div>
+                <input type="email" class="form-control" required id="fieldEmail" name="email">
+            </div>
         </div>
-    <div class="form-group">
-        <label for="fieldEmail" class="col-sm-2 controllabel">Email</label>
-        <div class="col-sm-4">
-            <input type="email" class="form-control" required id="fieldEmail" name="email">
+        <div class="form-group col-sm-5 offset-sm-1">
+            <label for="fieldPhone" class="controllabel">Phone</label>
+            <div>
+                <input type="text" class="form-control" required id="fieldPhone" name="phone">
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-4">
-            <button type="submit" class="btn btn-primary">Register</button>
+        <div class="form-group col-sm-5">
+            <label for="fieldAddress" class="controllabel">Address</label>
+            <div>
+                <input type="text" class="form-control" required id="fieldAddress" name="address">
+            </div>
         </div>
-    </div>
-</form>
+        <div class="form-group col-sm-10 offset-sm-1">
+            <div>
+                <button style="width: 100%" type="submit" class="btn btn-primary">Register</button>
+            </div>
+        </div>
+    </form>
 
+</div>
